# GTM

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: gtm-python-guide.md
docs/plans/: 2026-03-05-gtm-automation-design.md  2026-03-05-session-workflow-and-logging-design.md  2026-03-05-session-workflow-logging-impl.md  2026-03-09-gtm-strategic-analysis.md  2026-03-09-gtm-v2-scaling-design.md  2026-03-09-gtm-v2-scaling-impl.md  2026-03-13-reply-revisit-queue-design.md  2026-03-13-reply-revisit-queue-impl.md  2026-03-13-topic-intelligence-engine-design.md  2026-03-13-topic-intelligence-engine-impl.md
gtm/: __main__.py  analytics.py  calendar.py  cli.py  collectors.py  cron.py  db.py  decisions.py  engagement.py  goals.py  intelligence.py  niche.py  relationships.py  revisits.py  runner.py  state.py  stats.py  threads.py
tests/: test_analytics.py  test_calendar.py  test_cron.py  test_db.py  test_db_crud.py  test_decisions.py  test_engagement.py  test_intelligence.py  test_relationships.py  test_revisits.py  test_runner.py  test_state.py  test_stats.py  test_threads.py
