[project]
name = "gtm-automation"
version = "1.0.0"
description = "Automated Go-To-Market engagement system powered by Claude Code and OpenOwl"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Mihir Kanzariya", email = "kanzariyamihir@gmail.com"}
]
keywords = ["gtm", "marketing", "automation", "claude", "openowl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

[project.urls]
Homepage = "https://github.com/mihir-kanzariya/GTM"
Issues = "https://github.com/mihir-kanzariya/GTM/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
